package ru.ryabtsev.cloud.client.gui;

/**
 * Class contains text for common commands.
 */
public class CommandText {

    public static final String COPY = "_Copy";

    public static final String CUT = "C_ut";

    public static final String DELETE = "_Delete";

    public static final String REFRESH = "_Refresh";

    public static final String RENAME = "Re_name";
}
