package ru.ryabtsev.cloud.client.gui.dialog;

import javafx.fxml.Initializable;

import java.net.URL;
import java.util.ResourceBundle;

public class AboutDialogController implements Initializable {
    @Override
    public void initialize(URL location, ResourceBundle resources) {

    }
}
