@startuml
skinparam classAttributeIconSize 0

package ru.ryabtsev.cloud <<Frame>> {

    package server {
        ServerApplication ..> Server
        ServerApplication ..> ServerHandler

        class ServerHandler {
           - {static} String SERVER_STORAGE_ROOT
           - {static} Logger LOGGER
           - UserService userService
           - String userCurrentFolder
           - List<String> filesToDownload
           - Set<String> filesToDelete
        }

        package jdbc {
            Configuration<|--JdbcDefaultConfiguration
            Configuration*--JdbcConnectionManager
        }

        package service {
           interface UserService
           UserService <|.. DummyUserService
           UserService <|.. JdbcUserServiceBean
           ServerHandler *-- UserService
        }
    }

    package client {
        class ClientApplication
        class FileManagementController
        class LoginController
        class MenuBarController

        FileManagementController-[hidden]>LoginController
        LoginController-[hidden]>MenuBarController

        package gui {
            package dialog {
                class AboutDialog
                class AboutDialogController
                class BadRenameArgumentsAlert
                class NoSelectedFilesAlert
                class RenameDialog
            }

            class CommandText
            class FilesTableView
        }

        package client.service {
            interface AuthenticationService
            interface NetworkService {
               void start(String host, int port)
               void stop()
               boolean sendMessage(AbstractMessage message)
               AbstractMessage receiveMessage()
            }

            AuthenticationService <|.. NetworkAuthenticationService
            NetworkService <|.. NettyNetworkService
            ClientApplication --*NetworkService
            LoginController --* AuthenticationService
            FileManagementController --o NetworkService

            NetworkService o-- NetworkAuthenticationService
        }
    }
}
note top of ru.ryabtsev.cloud : "Client-server cloud application structure."
@enduml
